# jarvis-assistant

./: .env  .env.example  .gitignore  README.md  arch.html  jarvis_architecture_presentation.html  main.py  pyproject.toml  streamlit_app.py
src/jarvis/api/: main.py
src/jarvis/api/routes/: chat.py
src/jarvis/api/schemas/: chat.py
src/jarvis/config/: settings.py
src/jarvis/guardrails/: input_guard.py  output_guard.py  risk.py
src/jarvis/memory/: retrieve.py  store.py
src/jarvis/models/: ollama_client.py  openrouter_client.py
src/jarvis/orchestration/: approval_node.py  branches.py  context_node.py  graph.py  router_node.py  state.py
src/jarvis/tools/coding/: file_ops.py
src/jarvis/tools/general/: calculator.py  rag_search.py
tests/: test_router_node.py
